# fmtview

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-auth-check.yml  release.yml
benches/: diff-performance.sh  format-algorithm.sh  format-performance.sh  load-performance.sh  syntax-performance.sh  viewer-performance.sh
crates/fmtview-core/: Cargo.toml  README.md
crates/fmtview-core/src/: diff.rs  formats.rs  input.rs  lib.rs  load.rs  profile.rs  timeline.rs  transform.rs  tui.rs  viewer.rs
crates/fmtview-core/src/diff/: external.rs  tests.rs  view.rs
crates/fmtview-core/src/diff/model/: parse.rs  side_by_side.rs  tests.rs
crates/fmtview-core/src/formats/: structure.rs
crates/fmtview-core/src/formats/html/: transform.rs
crates/fmtview-core/src/formats/json/: chat.rs  path.rs  tool_links.rs  transform.rs
crates/fmtview-core/src/formats/json/tool_links/: tests.rs
crates/fmtview-core/src/formats/markdown/: highlight.rs
crates/fmtview-core/src/formats/plain/: highlight.rs  mod.rs
crates/fmtview-core/src/formats/toml/: mod.rs
crates/fmtview-core/src/formats/xml/: mod.rs
crates/fmtview-core/src/load/: lazy.rs  lazy_records.rs  lines.rs  open.rs  raw_record.rs  record_stream.rs  timeline.rs  view_file.rs
crates/fmtview-core/src/perf/: fixtures.rs  format.rs  load.rs  runner.rs
crates/fmtview-core/src/profile/: sniff.rs
crates/fmtview-core/src/transform/: detect.rs  engine.rs  tests.rs  types.rs
crates/fmtview-core/src/tui/: buffer_frame.rs  screen.rs  text.rs  wrap.rs
crates/fmtview-core/src/viewer/: diff.rs  file.rs  input.rs  tests.rs
crates/fmtview-core/src/viewer/diff/: input.rs  navigation.rs  render.rs
crates/fmtview-core/src/viewer/diff/render/: cell.rs
crates/fmtview-core/src/viewer/file/: breadcrumb.rs  chat_roles.rs  input.rs  markdown_modes.rs  position.rs  structure.rs
crates/fmtview-core/src/viewer/file/input/: events.rs  jump.rs  keys.rs  scroll.rs  search.rs  state.rs
crates/fmtview-core/src/viewer/file/render/: footer.rs  layout.rs  tail.rs  types.rs
crates/fmtview-core/src/viewer/file/structure/: scan.rs
crates/fmtview-core/src/viewer/tests/: format_highlight.rs  navigation.rs  perf.rs  render.rs  screen.rs  search.rs  structure.rs  support.rs  viewport.rs
crates/fmtview-core/src/viewer/tests/structure/: detection.rs  interaction.rs  json_visibility.rs  target.rs
crates/fmtview-core/tests/: headless_viewer.rs  record_timeline.rs
docs/: INDEX.md  architecture.md  performance.md  releasing.md  visual-verification.md
examples/: chat.jsonl  config.toml  conversation.jsonl  diff-left.json  diff-right.json  embed-timeline.rs  events.jsonl  generate-long-inline.py  long-inline.jsonl  messy.html  notes.md  page.html  response.xml  showcase.json  template.html.j2
npm/fmtview/: README.md  package.json
scripts/: bench-format-algorithm.sh  bench-format-performance.sh  bench-viewer-performance.sh  record-emulator-demo.sh
src/: cli.rs  diff.rs  format.rs  formats.rs  input.rs  lazy.rs  lib.rs  line_index.rs  load.rs  main.rs  perf.rs  profile.rs  shell_alias.rs  syntax.rs  transform.rs  tui.rs  view.rs  viewer.rs
src/diff/: external.rs  lazy_records.rs  mod.rs  model.rs  record_stream.rs  stdout.rs  tests.rs  view.rs  viewer.rs
src/format/: detect.rs  engine.rs  mod.rs  tests.rs  types.rs  xml.rs
src/formats/: checkpoints.rs  indent.rs  markup.rs  shared.rs  spans.rs
src/load/: indexed.rs  lazy.rs  lazy_records.rs  mod.rs  open.rs  plan.rs  (+2 more)
tests/: cli.rs  embedding_api.rs
(+181 files in other folders)
