[package]
name = "fmtview"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
description = "Fast terminal formatter and viewer for JSON, JSONL, XML-compatible markup, and formatted diffs"
license = "MIT"
repository = "https://github.com/siriusctrl/fmtview"
readme = "README.md"
keywords = ["json", "jsonl", "xml", "html", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "npm/"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
quick-xml = "0.39.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
