[package]
name = "fmtview"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Fast CLI viewer for highlighting, search, and diffs across JSON, JSONL, markup, text, and Jinja"
license = "MIT"
repository = "https://github.com/siriusctrl/fmtview"
readme = "README.md"
keywords = ["json", "jsonl", "xml", "jinja", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", "npm/"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
memchr = "2.8.0"
quick-xml = "0.39.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
tempfile = "3.27.0"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
