[package]
name = "fmtview-core"
version = "0.5.4"
edition = "2024"
rust-version = "1.85"
description = "Headless viewer engine for fmtview"
license = "MIT"
repository = "https://github.com/siriusctrl/fmtview"
readme = "README.md"
keywords = ["viewer", "terminal", "json", "diff"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "fmtview_core"
path = "src/lib.rs"
